# claudio

./: .gitignore  pyproject.toml
claudio/: claudio.py  claudio_extinction.py  flush.py  interval_timing.py  sound_check.py
claudio/guifunc/: wins.py
config/: base.yml  box_01.yml  box_02.yml  calibration.yml  flush.yml  sound_check.yml
config/gui/: FT.yml  PEAK.yml  box2port.yml
ino/: proto.ino
