[tool.poetry]
name = "claudio"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
SoundCard = "^0.4.0"
sounddevice = "^0.3.15"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
python-language-server = {extras = ["all"], version = "^0.33.2"}
pyflakes = "^2.2.0"
pycodestyle = "^2.6.0"
isort = "^4.3.21"
yapf = "^0.30.0"
pino = {git = "https://github.com/DoubutsuIsland/pino"}
amas = {git = "https://github.com/DoubutsuIsland/amas"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
